[gd_scene load_steps=4 format=2]

[ext_resource path="res://core/ui/assets/fonts/Montserrat-Black.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://addons/meme_template_plugin/MemeTemplateCaptionControl.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 1 )

[node name="MemeCaption" type="PanelContainer"]
margin_right = 515.0
margin_bottom = 185.0
size_flags_horizontal = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 508.0
margin_bottom = 237.0
color = Color( 0.968627, 0.423529, 0.0235294, 1 )

[node name="Fields" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 508.0
margin_bottom = 237.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PositionXField" type="HBoxContainer" parent="Fields"]
margin_right = 501.0
margin_bottom = 31.0

[node name="Label" type="Label" parent="Fields/PositionXField"]
margin_right = 248.0
margin_bottom = 31.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "Position x:"

[node name="SpinBox" type="SpinBox" parent="Fields/PositionXField"]
margin_left = 252.0
margin_right = 501.0
margin_bottom = 31.0
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 5000.0

[node name="PositionYField" type="HBoxContainer" parent="Fields"]
margin_top = 35.0
margin_right = 501.0
margin_bottom = 66.0

[node name="Label" type="Label" parent="Fields/PositionYField"]
margin_right = 248.0
margin_bottom = 31.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "Position y:"

[node name="SpinBox" type="SpinBox" parent="Fields/PositionYField"]
margin_left = 252.0
margin_right = 501.0
margin_bottom = 31.0
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 5000.0

[node name="WidthField" type="HBoxContainer" parent="Fields"]
margin_top = 70.0
margin_right = 501.0
margin_bottom = 101.0

[node name="Label" type="Label" parent="Fields/WidthField"]
margin_right = 248.0
margin_bottom = 31.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "Width:"

[node name="SpinBox" type="SpinBox" parent="Fields/WidthField"]
margin_left = 252.0
margin_right = 501.0
margin_bottom = 31.0
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 5000.0
value = 100.0

[node name="HeightField" type="HBoxContainer" parent="Fields"]
margin_top = 105.0
margin_right = 501.0
margin_bottom = 136.0

[node name="Label" type="Label" parent="Fields/HeightField"]
margin_right = 248.0
margin_bottom = 31.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "Height:"

[node name="SpinBox" type="SpinBox" parent="Fields/HeightField"]
margin_left = 252.0
margin_right = 501.0
margin_bottom = 31.0
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 5000.0
value = 50.0

[node name="RotationField" type="HBoxContainer" parent="Fields"]
margin_top = 140.0
margin_right = 501.0
margin_bottom = 171.0

[node name="Label" type="Label" parent="Fields/RotationField"]
margin_right = 248.0
margin_bottom = 31.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "Rotation:"

[node name="SpinBox" type="SpinBox" parent="Fields/RotationField"]
margin_left = 252.0
margin_right = 501.0
margin_bottom = 31.0
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = -360.0
max_value = 360.0

[node name="TextColorField" type="HBoxContainer" parent="Fields"]
margin_top = 175.0
margin_right = 501.0
margin_bottom = 206.0

[node name="Label" type="Label" parent="Fields/TextColorField"]
margin_right = 248.0
margin_bottom = 31.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
custom_fonts/font = SubResource( 1 )
text = "Text color:"

[node name="ColorPickerButton" type="ColorPickerButton" parent="Fields/TextColorField"]
margin_left = 252.0
margin_right = 501.0
margin_bottom = 31.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
text = "          "
flat = true
align = 0
color = Color( 1, 1, 1, 1 )

[node name="DeleteButton" type="Button" parent="Fields"]
margin_top = 210.0
margin_right = 501.0
margin_bottom = 230.0
text = "Delete"
[connection signal="pressed" from="Fields/DeleteButton" to="." method="_on_delete_button_pressed"]
